--- a/index.html
+++ b/index.html
@@ -5,19 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fac93b9a98.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
+    <title>DesafíoGrid</title>
 </head>
-<body>
 <header>
+    <p class="textoizquierda">SALE</p>
+    <p class="textoderecha"> Carro <i class="fa-solid fa-cart-shopping"></i></p>
 
 </header>
-<main>
 
-</main>
+<body>
+    <div class="main-container">
+      <aside> 
+    <div class="icono">
+        <i class="fa-solid fa-bars"></i> <h2>Categorías</h2>
+    </div>
+       <div class="lista"> 
+        <ul>
+          <li>
+            <a href="#">Hombre (14)</a>
+          </li>
+          <li>
+            <a href="#">Mujer (26)</a>
+          </li>
+          <li>
+            <a href="#">Niños (19)</a>
+          </li>
+          <li>
+            <a href="#">Accesorios (23)</a>
+          </li>
+        </ul>
+    </div> 
+      </aside>
+      <main>
+        <section class="product-grid">
+          <div class="card">
+            <img src="./assets/img/carterarosa.jpg" alt=""/>
+            <h3>Cartera de Mano</h3>
+            <p>$23.990</p>
+            <a class="btn" href="#">Añadir al carro  <i class="fa-solid fa-cart-shopping"></i></a>
+          </div>
+          <div class="card">
+            <img src="./assets/img/chaquetaAmarilla.jpg" alt="" />
+            <h3>Chaqueta</h3>
+            <p>$32.990</p>
+            <a class="btn" href="#">Añadir al carro  <i class="fa-solid fa-cart-shopping"></i></a>
+          </div>
+          <div class="card">
+            <img src="./assets/img/zapatillas.jpg" alt="" />
+            <h3>Zapatillas Nike</h3>
+            <p>$51.990</p>
+            <a class="btn" href="#">Añadir al carro  <i class="fa-solid fa-cart-shopping"></i></a>
+          </div>
+          <div class="card">
+            <img src="./assets/img/jeansblue.jpg" alt="" />
+            <h3>Jeans</h3>
+            <p>$21.990</p>
+            <a class="btn" href="#">Añadir al carro  <i class="fa-solid fa-cart-shopping"></i></a>
+          </div>
+        </section>
+      </main>
+    </div>
 
 <footer>
-
+<h4>@miecommerce</h4>
 </footer>
+  </body>
+
+
     
-</body>
-</html>
+
+</html
