--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,71 +15,65 @@
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
     <title>DesafíoGrid</title>
 </head>
-<header>
-    <p class="textoizquierda">SALE</p>
-    <p class="textoderecha"> Carro <i class="fa-solid fa-cart-shopping"></i></p>
-
-</header>
-
 <body>
     <div class="main-container">
-      <aside> 
-    <div class="icono">
-        <i class="fa-solid fa-bars"></i> <h2>Categorías</h2>
+        <header>
+            <p class="textoizquierda">SALE</p>
+            <p class="textoderecha"> Carro <i class="fa-solid fa-cart-shopping"></i></p>
+        </header>
+        <aside>
+            <div class="icono">
+                <i class="fa-solid fa-bars"></i>
+                <h2>Categorías</h2>
+            </div>
+            <div class="lista">
+                <ul>
+                    <li>
+                        <a href="#">Hombre (14)</a>
+                    </li>
+                    <li>
+                        <a href="#">Mujer (26)</a>
+                    </li>
+                    <li>
+                        <a href="#">Niños (19)</a>
+                    </li>
+                    <li>
+                        <a href="#">Accesorios (23)</a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
+        <main>
+            <section class="product-grid">
+                <div class="card">
+                    <img src="./assets/img/carterarosa.jpg" alt="" />
+                    <h3>Cartera de Mano</h3>
+                    <p>$23.990</p>
+                    <a class="btn" href="#">Añadir al carro <i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/chaquetaAmarilla.jpg" alt="" />
+                    <h3>Chaqueta</h3>
+                    <p>$32.990</p>
+                    <a class="btn" href="#">Añadir al carro <i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/zapatillas.jpg" alt="" />
+                    <h3>Zapatillas Nike</h3>
+                    <p>$51.990</p>
+                    <a class="btn" href="#">Añadir al carro <i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/jeansblue.jpg" alt="" />
+                    <h3>Jeans</h3>
+                    <p>$21.990</p>
+                    <a class="btn" href="#">Añadir al carro <i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <h4>@miecommerce</h4>
+        </footer>
     </div>
-       <div class="lista"> 
-        <ul>
-          <li>
-            <a href="#">Hombre (14)</a>
-          </li>
-          <li>
-            <a href="#">Mujer (26)</a>
-          </li>
-          <li>
-            <a href="#">Niños (19)</a>
-          </li>
-          <li>
-            <a href="#">Accesorios (23)</a>
-          </li>
-        </ul>
-    </div> 
-      </aside>
-      <main>
-        <section class="product-grid">
-          <div class="card">
-            <img src="./assets/img/carterarosa.jpg" alt=""/>
-            <h3>Cartera de Mano</h3>
-            <p>$23.990</p>
-            <a class="btn" href="#">Añadir al carro  <i class="fa-solid fa-cart-shopping"></i></a>
-          </div>
-          <div class="card">
-            <img src="./assets/img/chaquetaAmarilla.jpg" alt="" />
-            <h3>Chaqueta</h3>
-            <p>$32.990</p>
-            <a class="btn" href="#">Añadir al carro  <i class="fa-solid fa-cart-shopping"></i></a>
-          </div>
-          <div class="card">
-            <img src="./assets/img/zapatillas.jpg" alt="" />
-            <h3>Zapatillas Nike</h3>
-            <p>$51.990</p>
-            <a class="btn" href="#">Añadir al carro  <i class="fa-solid fa-cart-shopping"></i></a>
-          </div>
-          <div class="card">
-            <img src="./assets/img/jeansblue.jpg" alt="" />
-            <h3>Jeans</h3>
-            <p>$21.990</p>
-            <a class="btn" href="#">Añadir al carro  <i class="fa-solid fa-cart-shopping"></i></a>
-          </div>
-        </section>
-      </main>
-    </div>
-
-<footer>
-<h4>@miecommerce</h4>
-</footer>
-  </body>
-
-
-    
-
+</body>
 </html
